# 2019_nCoV_prediction

./: .gitignore  LICENSE  README.en.md  README.md  commitlint.config.js  package-lock.json  package.json
2019_nCoV_prediction/: .clang-format  CMakeLists.txt
2019_nCoV_prediction/data/: data.txt  parameter.txt
2019_nCoV_prediction/docs/html/: annotated.html  bug.html  classCurveFittingEdge-members.html  classCurveFittingEdge.html  classCurveFittingEdge__coll__graph.map  classCurveFittingEdge__coll__graph.md5  classCurveFittingVertex-members.html  classCurveFittingVertex.html  classCurveFittingVertex__inherit__graph.map  classCurveFittingVertex__inherit__graph.md5  classes.html  classnCoV-members.html  classnCoV.html  curve__fitting__edge_8h.html  curve__fitting__edge_8h__dep__incl.map  curve__fitting__edge_8h__dep__incl.md5  curve__fitting__edge_8h__incl.map  curve__fitting__edge_8h__incl.md5  curve__fitting__edge_8h_source.html  curve__fitting__vertex_8h.html  curve__fitting__vertex_8h__dep__incl.map  curve__fitting__vertex_8h__dep__incl.md5  curve__fitting__vertex_8h__incl.map  curve__fitting__vertex_8h__incl.md5  curve__fitting__vertex_8h_source.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.hhc  index.hhk  index.hhp  index.html  (+22 more)
2019_nCoV_prediction/docs/latex/: annotated.tex  bug.tex  classCurveFittingEdge.tex  classCurveFittingEdge__coll__graph.md5  classCurveFittingVertex.tex  classCurveFittingVertex__inherit__graph.md5  classnCoV.tex  curve__fitting__edge_8h.tex  curve__fitting__edge_8h__dep__incl.md5  curve__fitting__edge_8h__incl.md5  (+17 more)
2019_nCoV_prediction/include/: curve_fitting_edge.h  curve_fitting_vertex.h  nCoV.h
2019_nCoV_prediction/scripts/: plot_sir.py
2019_nCoV_prediction/src/: main.cpp  nCoV.cpp
(+30 files in other folders)
